src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

select {
  overflow: scroll;
}

optgroup {
  font-size: 400px;
}

ul {
  list-style: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

input {
  text-align: center;
}

@media only screen and (min-device-width: 480px) {
  #monsterCard {
    width: 30%;
  }

  #numSelect {
    margin-left: 45%;
    margin-right: 45%;
  }
}

@media only screen and (max-device-width: 481px) {
  #monsterCard {
    width: 80%;
  }
  #numSelect {
    margin-left: 30%;
    margin-right: 29%;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

